--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Dogs -- Folklore'
 - !lcc 'QL'
+- GITenberg
 title: '''Murphy'': A Message to Dog Lovers'
 url: http://www.gutenberg.org/ebooks/25763
